k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-management
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-management
  template:
    metadata:
      labels:
        app: user-management
    spec:
      containers:
        - image: us-east4-docker.pkg.dev/ny-dol-wp-work-manager/wp-docker-repo/wp-user-api
          name: user-management
          securityContext:
            runAsNonRoot: true
          ports:
            - containerPort: 8080
