k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: localhost-user-management
  namespace: user-management
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - backend:
          service:
            name: user-management
            port:
              number: 8080
        path: /user-management
        pathType: Prefix
